<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_completo" />
            <EditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail" />
            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
            <CheckBox
                android:id="@+id/checkAtualizacoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receber_atualiza_es_de_oportunidades" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefone" />
            <EditText
                android:id="@+id/editTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
            <RadioGroup
                android:id="@+id/radioTipoTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioComercial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comercial" />
                <RadioButton
                    android:id="@+id/radioResidencial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/residencial" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkAdicionarCelular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adicionar_telefone_celular" />

            <LinearLayout
                android:id="@+id/layoutCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celular" />
                <EditText
                    android:id="@+id/editCelular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo" />
            <RadioGroup
                android:id="@+id/radioSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino" />
                <RadioButton
                    android:id="@+id/radioFeminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feminino" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_de_nascimento" />
            <EditText
                android:id="@+id/editNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forma_o" />
            <Spinner
                android:id="@+id/spinnerFormacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Campos adicionais para formação (deve ser dinâmico no código) -->
            <LinearLayout
                android:id="@+id/layoutCamposFormacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vagas_de_interesse" />
            <EditText
                android:id="@+id/editVagasInteresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/buttonSalvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salvar" />
                <Button
                    android:id="@+id/buttonLimpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/limpar"
                    android:layout_marginStart="16dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>